Fixed top gap

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 
 #root {
   height: 100%;
+  display: flex;
 }
 
 :root,
